set (SRC main.c errors.c add.c move_and_resize.c free_subtree.c)

if (${TRALLOC_SHARED})
    set (NAME ${TRALLOC_TARGET}-test-basic)
    add_executable (${NAME} ${SRC})
    target_link_libraries (${NAME} ${TRALLOC_TARGET} m)
    add_test (${NAME} ${NAME})
endif ()
if (${TRALLOC_STATIC})
    set (NAME ${TRALLOC_TARGET}-static-test-basic)
    add_executable (${NAME} ${SRC})
    target_link_libraries (${NAME} ${TRALLOC_TARGET}_static m)
    add_test (${NAME} ${NAME})
endif ()