set (SOURCES errors.c add.c move_and_resize.c free_subtree.c test.c)

if (${TRALLOC_SHARED})
    add_library (${TRALLOC_TARGET}-libtest-basic SHARED ${SOURCES})
    target_link_libraries (${TRALLOC_TARGET}-libtest-basic ${TRALLOC_TARGET} m)
endif ()
if (${TRALLOC_STATIC})
    add_library (${TRALLOC_TARGET}-libtest-basic-static STATIC ${SOURCES})
    target_link_libraries (${TRALLOC_TARGET}-libtest-basic-static ${TRALLOC_TARGET}-static m)
    set_target_properties (${TRALLOC_TARGET}-libtest-basic-static PROPERTIES OUTPUT_NAME ${TRALLOC_TARGET}-libtest-basic-static)
endif ()

if (${TRALLOC_SHARED})
    set (NAME ${TRALLOC_TARGET}-test-basic)
    add_executable (${NAME} main.c)
    target_link_libraries (${NAME} ${TRALLOC_TARGET}-libtest-basic)
    add_test (${NAME} ${NAME})
endif ()
if (${TRALLOC_STATIC})
    set (NAME ${TRALLOC_TARGET}-test-basic-static)
    add_executable (${NAME} main.c)
    target_link_libraries (${NAME} ${TRALLOC_TARGET}-libtest-basic-static)
    add_test (${NAME} ${NAME})
endif ()
