set (SOURCES add.c resize.c move.c free.c ../lib/malloc_dynarr.c test.c)

if (${TRALLOC_THREADS})
    add_subdirectory ("threads")
endif ()

if (${TRALLOC_SHARED})
    add_library (${TRALLOC_TARGET}-libtest-debug SHARED ${SOURCES})
    target_link_libraries (${TRALLOC_TARGET}-libtest-debug ${TRALLOC_TARGET})
endif ()
if (${TRALLOC_STATIC})
    add_library (${TRALLOC_TARGET}-libtest-debug-static STATIC ${SOURCES})
    target_link_libraries (${TRALLOC_TARGET}-libtest-debug-static ${TRALLOC_TARGET}-static)
    set_target_properties (${TRALLOC_TARGET}-libtest-debug-static PROPERTIES OUTPUT_NAME ${TRALLOC_TARGET}-libtest-debug-static)
endif ()

if (${TRALLOC_SHARED})
    set (NAME ${TRALLOC_TARGET}-test-debug)
    add_executable (${NAME} main.c)
    target_link_libraries (${NAME} ${TRALLOC_TARGET}-libtest-debug)
    add_test (${NAME} ${NAME})
endif ()
if (${TRALLOC_STATIC})
    set (NAME ${TRALLOC_TARGET}-test-debug-static)
    add_executable (${NAME} main.c)
    target_link_libraries (${NAME} ${TRALLOC_TARGET}-libtest-debug-static)
    add_test (${NAME} ${NAME})
endif ()
