set (SOURCES errors.c destructor.c ../lib/malloc_dynarr.c)

if (${TRALLOC_SHARED})
    add_library (${TRALLOC_TARGET}-libtest-destructor SHARED ${SOURCES})
    target_link_libraries (${TRALLOC_TARGET}-libtest-destructor ${TRALLOC_TARGET})
endif ()
if (${TRALLOC_STATIC})
    add_library (${TRALLOC_TARGET}-libtest-destructor-static STATIC ${SOURCES})
    target_link_libraries (${TRALLOC_TARGET}-libtest-destructor-static ${TRALLOC_TARGET}-static)
    set_target_properties (${TRALLOC_TARGET}-libtest-destructor-static PROPERTIES OUTPUT_NAME ${TRALLOC_TARGET}-libtest-destructor-static)
endif ()

if (${TRALLOC_SHARED})
    set (NAME ${TRALLOC_TARGET}-test-destructor)
    add_executable (${NAME} main.c)
    target_link_libraries (${NAME} ${TRALLOC_TARGET}-libtest-destructor)
    add_test (${NAME} ${NAME})
endif ()
if (${TRALLOC_STATIC})
    set (NAME ${TRALLOC_TARGET}-test-destructor-static)
    add_executable (${NAME} main.c)
    target_link_libraries (${NAME} ${TRALLOC_TARGET}-libtest-destructor-static)
    add_test (${NAME} ${NAME})
endif ()
