set (SOURCES add.c resize.c move.c free.c ../lib/malloc_dynarr.c)

if (${TRALLOC_SHARED})
    add_library (${TRALLOC_TARGET}-libtest-events SHARED ${SOURCES})
    target_link_libraries (${TRALLOC_TARGET}-libtest-events ${TRALLOC_TARGET})
endif ()
if (${TRALLOC_STATIC})
    add_library (${TRALLOC_TARGET}-libtest-events-static STATIC ${SOURCES})
    target_link_libraries (${TRALLOC_TARGET}-libtest-events-static ${TRALLOC_TARGET}-static)
    set_target_properties (${TRALLOC_TARGET}-libtest-events-static PROPERTIES OUTPUT_NAME ${TRALLOC_TARGET}-libtest-events-static)
endif ()

if (${TRALLOC_SHARED})
    set (NAME ${TRALLOC_TARGET}-test-events)
    add_executable (${NAME} main.c)
    target_link_libraries (${NAME} ${TRALLOC_TARGET}-libtest-events)
    add_test (${NAME} ${NAME})
endif ()
if (${TRALLOC_STATIC})
    set (NAME ${TRALLOC_TARGET}-test-events-static)
    add_executable (${NAME} main.c)
    target_link_libraries (${NAME} ${TRALLOC_TARGET}-libtest-events-static)
    add_test (${NAME} ${NAME})
endif ()
