set (SRC main.c basic.c)
if (${TRALLOC_DESTRUCTOR})
    set (SRC ${SRC} destructor.c)
endif ()
if (${TRALLOC_REFERENCE})
    set (SRC ${SRC} reference.c)
endif ()

if (${TRALLOC_SHARED})
    set (NAME ${TRALLOC_TARGET}-test-length)
    add_executable (${NAME} ${SRC})
    target_link_libraries (${NAME} ${TRALLOC_TARGET})
    add_test (${NAME} ${NAME})
endif ()
if (${TRALLOC_STATIC})
    set (NAME ${TRALLOC_TARGET}-static-test-length)
    add_executable (${NAME} ${SRC})
    target_link_libraries (${NAME} ${TRALLOC_TARGET}_static)
    add_test (${NAME} ${NAME})
endif ()