set (SOURCES common.c test.c)

if (${TRALLOC_SHARED})
    add_library (${TRALLOC_TARGET}-libtest-length SHARED ${SOURCES})
    target_link_libraries (${TRALLOC_TARGET}-libtest-length ${TRALLOC_TARGET})
endif ()
if (${TRALLOC_STATIC})
    add_library (${TRALLOC_TARGET}-libtest-length-static STATIC ${SOURCES})
    target_link_libraries (${TRALLOC_TARGET}-libtest-length-static ${TRALLOC_TARGET}-static)
    set_target_properties (${TRALLOC_TARGET}-libtest-length-static PROPERTIES OUTPUT_NAME ${TRALLOC_TARGET}-libtest-length-static)
endif ()

if (${TRALLOC_SHARED})
    set (NAME ${TRALLOC_TARGET}-test-length)
    add_executable (${NAME} main.c)
    target_link_libraries (${NAME} ${TRALLOC_TARGET}-libtest-length)
    add_test (${NAME} ${NAME})
endif ()
if (${TRALLOC_STATIC})
    set (NAME ${TRALLOC_TARGET}-test-length-static)
    add_executable (${NAME} main.c)
    target_link_libraries (${NAME} ${TRALLOC_TARGET}-libtest-length-static)
    add_test (${NAME} ${NAME})
endif ()
