set (SRC main.c errors.c add.c move_and_resize.c free_subtree.c)

if (${TRALLOC_SHARED})
    set (NAME ${TRALLOC_TARGET}-test-reference)
    add_executable (${NAME} ${SRC})
    target_link_libraries (${NAME} ${TRALLOC_TARGET})
    add_test (${NAME} ${NAME})
endif ()
if (${TRALLOC_STATIC})
    set (NAME ${TRALLOC_TARGET}-static-test-reference)
    add_executable (${NAME} ${SRC})
    target_link_libraries (${NAME} ${TRALLOC_TARGET}_static)
    add_test (${NAME} ${NAME})
endif ()