set (SOURCES test.c)
if (${TRALLOC_UTILS_BUFFER})
    set (SOURCES ${SOURCES} buffer.c)
endif ()

if (${TRALLOC_SHARED})
    add_library (${TRALLOC_TARGET}-libtest-utils SHARED ${SOURCES})
    target_link_libraries (${TRALLOC_TARGET}-libtest-utils ${TRALLOC_TARGET})
endif ()
if (${TRALLOC_STATIC})
    add_library (${TRALLOC_TARGET}-libtest-utils-static STATIC ${SOURCES})
    target_link_libraries (${TRALLOC_TARGET}-libtest-utils-static ${TRALLOC_TARGET}-static)
    set_target_properties (${TRALLOC_TARGET}-libtest-utils-static PROPERTIES OUTPUT_NAME ${TRALLOC_TARGET}-libtest-utils-static)
endif ()

if (${TRALLOC_SHARED})
    set (NAME ${TRALLOC_TARGET}-test-utils)
    add_executable (${NAME} main.c)
    target_link_libraries (${NAME} ${TRALLOC_TARGET}-libtest-utils)
    add_test (${NAME} ${NAME})
endif ()
if (${TRALLOC_STATIC})
    set (NAME ${TRALLOC_TARGET}-test-utils-static)
    add_executable (${NAME} main.c)
    target_link_libraries (${NAME} ${TRALLOC_TARGET}-libtest-utils-static)
    add_test (${NAME} ${NAME})
endif ()
