set (LOCAL_SOURCES)

if (${TALLOC_UTILS_BUFFER})
    install (FILES buffer.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
    set (LOCAL_SOURCES ${LOCAL_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/buffer.c)
endif ()
if (${TALLOC_UTILS_DYNARR})
    install (FILES dynarr.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
    set (LOCAL_SOURCES ${LOCAL_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/dynarr.c)
endif ()

set (SOURCES ${SOURCES} ${LOCAL_SOURCES} PARENT_SCOPE)