if (TRALLOC_DEBUG_THREADS_LENGTH STREQUAL "spinlock")
    set (TRALLOC_DEBUG_THREADS_LENGTH TRALLOC_SPINLOCK PARENT_SCOPE)
else()
    set (TRALLOC_DEBUG_THREADS_LENGTH TRALLOC_MUTEX PARENT_SCOPE)
endif ()
if (TRALLOC_DEBUG_THREADS_CHILDREN STREQUAL "spinlock")
    set (TRALLOC_DEBUG_THREADS_CHILDREN TRALLOC_SPINLOCK PARENT_SCOPE)
else()
    set (TRALLOC_DEBUG_THREADS_CHILDREN TRALLOC_MUTEX PARENT_SCOPE)
endif ()

install (FILES chunk.h events.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
set (LOCAL_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/chunk.c
    ${CMAKE_CURRENT_SOURCE_DIR}/events.c
)

if (${TRALLOC_DEBUG_CALLBACKS})
    install (FILES callbacks.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
    set (LOCAL_SOURCES ${LOCAL_SOURCES}
        ${CMAKE_CURRENT_SOURCE_DIR}/callbacks.c
    )
endif()

if (${TRALLOC_DEBUG_STATS})
    install (FILES stats.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
    set (LOCAL_SOURCES ${LOCAL_SOURCES}
        ${CMAKE_CURRENT_SOURCE_DIR}/stats.c
    )
endif()

if (${TRALLOC_DEBUG_THREADS})
    install (FILES threads.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
    set (LOCAL_SOURCES ${LOCAL_SOURCES}
        ${CMAKE_CURRENT_SOURCE_DIR}/threads.c
    )
endif()

set (SOURCES ${SOURCES} ${LOCAL_SOURCES} PARENT_SCOPE)
