install (FILES "common.h" "chunk.h" "events.h" DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
set (LOCAL_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/common.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/events.c"
)

if (${TRALLOC_DEBUG_CALLBACKS})
    install (FILES "callbacks.h" DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
    set (LOCAL_SOURCES ${LOCAL_SOURCES}
        "${CMAKE_CURRENT_SOURCE_DIR}/callbacks.c"
    )
endif()

if (${TRALLOC_DEBUG_STATS})
    install (FILES "stats.h" DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
    set (LOCAL_SOURCES ${LOCAL_SOURCES}
        "${CMAKE_CURRENT_SOURCE_DIR}/stats.c"
    )
endif()

if (${TRALLOC_DEBUG_THREADS})
    install (FILES "threads.h" DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
    set (LOCAL_SOURCES ${LOCAL_SOURCES}
        "${CMAKE_CURRENT_SOURCE_DIR}/threads.c"
    )
endif()

set (SOURCES ${SOURCES} ${LOCAL_SOURCES} PARENT_SCOPE)
