set (LOCAL_SOURCES)

install (FILES chunk.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
set (LOCAL_SOURCES ${LOCAL_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/chunk.c)

if (${TRALLOC_DESTRUCTOR})
    install (FILES destructor.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
    set (LOCAL_SOURCES  ${LOCAL_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/destructor.c)
endif ()

set (SOURCES ${SOURCES} ${LOCAL_SOURCES} PARENT_SCOPE)