set (LOCAL_SOURCES)

install (FILES string.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")

if (${TRALLOC_DESTRUCTOR})
    install (FILES file.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
    set (LOCAL_SOURCES ${LOCAL_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/file.c)
endif()

set (CURRENT_INCLUDEDIR "${CURRENT_INCLUDEDIR}/string")
add_subdirectory ("string")

set (SOURCES ${SOURCES} ${LOCAL_SOURCES} PARENT_SCOPE)