install (FILES "string.h" DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
set (LOCAL_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/string.c")

if (${TRALLOC_FILE})
    install (FILES "file.h" DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${CURRENT_INCLUDEDIR}")
    set (LOCAL_SOURCES ${LOCAL_SOURCES} "${CMAKE_CURRENT_SOURCE_DIR}/file.c")
endif()

set (SOURCES ${SOURCES} ${LOCAL_SOURCES} PARENT_SCOPE)